@@ -1,3 +1,9 @@
+2007-01-08  Brandon Hale  <brandon@ubuntu.com>
+
+	* src/notify-sharp/, src/TrayIcon.cs:
+	Patch from Sebastian Dröge on bug #394166 to use notify-sharp
+	instead of pinvoking libnotify.
+
 2007-01-06  Brandon Hale  <brandon@ubuntu.com>
 
 	* src/DBusPlayer.cs:
